--- a/Test.Orleans/Test.Orleans.Client/Test.Orleans.Client.csproj
+++ b/Test.Orleans/Test.Orleans.Client/Test.Orleans.Client.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Test.Orleans.Interfaces\Test.Orleans.Interfaces.csproj" />
+    <ProjectReference Include="..\Test.Orleans.Actors.Interfaces\Test.Orleans.Actors.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
