--- a/Test.Orleans/Test.Orleans/Test.Orleans.Host.csproj
+++ b/Test.Orleans/Test.Orleans/Test.Orleans.Host.csproj
@@ -11,8 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Test.Orleans.Actors.Interfaces\Test.Orleans.Actors.Interfaces.csproj" />
     <ProjectReference Include="..\Test.Orleans.Actors\Test.Orleans.Actors.csproj" />
     <ProjectReference Include="..\Test.Orleans.Interfaces\Test.Orleans.Interfaces.csproj" />
+    <ProjectReference Include="..\Test.Orleans.Services\Test.Orleans.Services.csproj" />
   </ItemGroup>
 
 </Project>
