--- a/Test.Orleans/Test.Orleans.Client/Test.Orleans.Client.csproj
+++ b/Test.Orleans/Test.Orleans.Client/Test.Orleans.Client.csproj
@@ -7,7 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Orleans.Client" Version="2.3.6" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="2.4.0" />
+    <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="2.4.0" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="2.4.0" />
+    <PackageReference Include="Microsoft.Orleans.Reminders.AdoNet" Version="2.4.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
   </ItemGroup>
 
   <ItemGroup>
