--- a/Test.Orleans/Test.Orleans.Client/Study.Orleans.Client.csproj
+++ b/Test.Orleans/Test.Orleans.Client/Study.Orleans.Client.csproj
@@ -7,19 +7,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="2.4.0" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="2.4.0" />
-    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.4.0" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="2.4.0" />
     <PackageReference Include="Microsoft.Orleans.Reminders.AdoNet" Version="2.4.0" />
-    <PackageReference Include="Microsoft.Orleans.Server" Version="2.4.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.25" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Test.Orleans.Actors.Interfaces\Test.Orleans.Actors.Interfaces.csproj" />
-    <ProjectReference Include="..\Test.Orleans.Actors\Test.Orleans.Actors.csproj" />
-    <ProjectReference Include="..\Test.Orleans.Interfaces\Test.Orleans.Interfaces.csproj" />
-    <ProjectReference Include="..\Test.Orleans.Services\Test.Orleans.Services.csproj" />
+    <ProjectReference Include="..\Test.Orleans.Actors.Interfaces\Study.Orleans.Actors.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
