--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@
 /Test.Orleans/Test.Orleans.Actors.Interfaces/obj
 /Test.Orleans/Test.Orleans.Services/bin/Debug/netcoreapp2.1
 /Test.Orleans/Test.Orleans.Services/obj
+/Test.Orleans/Study.Orleans/bin/Debug/netcoreapp2.1
+/Test.Orleans/Study.Orleans/obj
+/Test.Orleans/Study.Orleans.Actors/bin/Debug/netcoreapp2.1
+/Test.Orleans/Study.Orleans.Actors/obj
+/Test.Orleans/Study.Orleans.Actors.Interfaces/bin/Debug/netcoreapp2.1
+/Test.Orleans/Study.Orleans.Actors.Interfaces/obj
+/Test.Orleans/Study.Orleans.Client/bin/Debug/netcoreapp2.1
+/Test.Orleans/Study.Orleans.Client/obj
+/Test.Orleans/Study.Orleans.Interfaces/bin/Debug/netcoreapp2.1
+/Test.Orleans/Study.Orleans.Interfaces/obj
+/Test.Orleans/Study.Orleans.Services/bin/Debug/netcoreapp2.1
+/Test.Orleans/Study.Orleans.Services/obj
