--- a/Test.Orleans/Study.Orleans.Client/Study.Orleans.Client.csproj
+++ b/Test.Orleans/Study.Orleans.Client/Study.Orleans.Client.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Test.Orleans.Actors.Interfaces\Study.Orleans.Actors.Interfaces.csproj" />
+    <ProjectReference Include="..\Study.Orleans.Actors.Interfaces\Study.Orleans.Actors.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
