--- a/Test.Orleans/Study.Orleans.Actors/Study.Orleans.Actors.csproj
+++ b/Test.Orleans/Study.Orleans.Actors/Study.Orleans.Actors.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Test.Orleans.Actors.Interfaces\Study.Orleans.Actors.Interfaces.csproj" />
-    <ProjectReference Include="..\Test.Orleans.Interfaces\Study.Orleans.Interfaces.csproj" />
+    <ProjectReference Include="..\Study.Orleans.Actors.Interfaces\Study.Orleans.Actors.Interfaces.csproj" />
+    <ProjectReference Include="..\Study.Orleans.Interfaces\Study.Orleans.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
