--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@
 /Test.Orleans/Study.Orleans.Interfaces/obj
 /Test.Orleans/Study.Orleans.Services/bin/Debug/netcoreapp2.1
 /Test.Orleans/Study.Orleans.Services/obj
+/Test.Orleans/Study.Orleans/bin/Debug/netcoreapp3.1
+/Test.Orleans/Study.Orleans.Actors/bin/Debug/netcoreapp3.1
+/Test.Orleans/Study.Orleans.Actors.Interfaces/bin/Debug/netcoreapp3.1
+/Test.Orleans/Study.Orleans.Client/bin/Debug/netcoreapp3.1
+/Test.Orleans/Study.Orleans.Data/bin/Debug/netcoreapp3.1
+/Test.Orleans/Study.Orleans.Data/obj
+/Test.Orleans/Study.Orleans.Interfaces/bin/Debug/netcoreapp3.1
+/Test.Orleans/Study.Orleans.Services/bin/Debug/netcoreapp3.1
