--- a/Test.Orleans/Study.Orleans.Actors/Study.Orleans.Actors.csproj
+++ b/Test.Orleans/Study.Orleans.Actors/Study.Orleans.Actors.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.4.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Study.Orleans.Actors.Interfaces\Study.Orleans.Actors.Interfaces.csproj" />
+    <ProjectReference Include="..\Study.Orleans.Data\Study.Orleans.Data.csproj" />
     <ProjectReference Include="..\Study.Orleans.Interfaces\Study.Orleans.Interfaces.csproj" />
   </ItemGroup>
 
