--- a/Test.Orleans/Study.Orleans/Study.Orleans.Host.csproj
+++ b/Test.Orleans/Study.Orleans/Study.Orleans.Host.csproj
@@ -2,17 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AdoNet" Version="2.4.0" />
     <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.4.0" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="2.4.0" />
     <PackageReference Include="Microsoft.Orleans.Reminders.AdoNet" Version="2.4.0" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="2.4.0" />
     <PackageReference Include="MySql.Data" Version="8.0.25" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
   </ItemGroup>
 
